example collapsable spec fix

--- a/src/assets/scss/json-formatter.scss
+++ b/src/assets/scss/json-formatter.scss
@@ -24,7 +24,7 @@ $default-color: white;
 $string-color: #7eeaca;
 $number-color: #17a2b8;
 $boolean-color: #e83e8c;
-$null-color: #855A00;
+$null-color: #e83e8c;
 $undefined-color: rgb(202, 11, 105);
 $function-color: #e83e8c;
 $rotate-time: 100ms;
@@ -32,7 +32,7 @@ $toggler-opacity: 0.6;
 $toggler-color: #45376F;
 $bracket-color: white;
 $key-color: white;
-$url-color: blue;
+$url-color: aqua;
 
 [appJsonFormat][appJsonFormat] {
   font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !important;
